demo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: test
  labels:
    app: nginx-pod
spec:
  containers:
    - name: nginx-pod
      image: nginx
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          memory: "100Mi"
          cpu: "500m"
        requests:
          memory: "80Mi"
          cpu: "300m"
  restartPolicy: Always
