demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test
spec:
  selector:
    app: nginx-deploy
  ports:
    - port: 80
  type: NodePort
